--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -180,10 +180,14 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Chains\ChainEndpoint.cs" />
     <Compile Include="DiagnosticsChromeExtension.cs" />
+    <Compile Include="Requests\BehaviorNodeTraceTag.cs" />
     <Compile Include="Requests\HttpRequestVisualization.cs" />
     <Compile Include="Requests\RequestGrid.cs" />
     <Compile Include="Requests\RequestVisualizationEndpoint.cs" />
+    <Compile Include="Runtime\HttpStatus.cs" />
+    <Compile Include="Runtime\RequestStep.cs" />
     <Compile Include="Runtime\RequestTraceListener.cs" />
+    <Compile Include="Runtime\TracedStep.cs" />
     <Compile Include="Runtime\Tracing\IRequestLogBuilder.cs" />
     <Compile Include="Runtime\Tracing\IRequestTrace.cs" />
     <Compile Include="Runtime\Tracing\RequestLogBuilder.cs" />
