--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="DiagnosticsExtensionTester.cs" />
     <Compile Include="InteractionContextExtensions.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTagTester.cs" />
+    <Compile Include="Requests\RequestStepTester.cs" />
     <Compile Include="Routes\RouteReportTester.cs" />
     <Compile Include="Runtime\ApplyTracingIntegrationTesting.cs" />
     <Compile Include="Runtime\BehaviorTracerNodeTester.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
     <Compile Include="Shared\Tags\DetailTableBuilderTester.cs" />
+    <Compile Include="Visualization\VisualizerTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
