--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -137,29 +137,6 @@
     <Content Include="Shared\bindings.xml">
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Shared\Old\AuthorizationReport.spark" />
-    <None Include="Shared\Old\BehaviorStart.spark" />
-    <None Include="Shared\Old\BehaviorFinish.spark" />
-    <None Include="Shared\Old\Fluid.spark" />
-    <None Include="Shared\Old\TwoColumn.spark" />
-    <None Include="Shared\Old\RequestLogEntry.spark" />
-    <None Include="Shared\Old\FieldAccessReport.spark" />
-    <None Include="Shared\Old\HttpStatusReport.spark" />
-    <None Include="Shared\Old\RedirectReport.spark" />
-    <None Include="Shared\Old\ValueConverterSelection.spark">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Shared\Old\PropertyBinderSelection.spark" />
-    <None Include="Shared\Old\ModelBinderSelection.spark" />
-    <None Include="Shared\Old\ModelBindingException.spark" />
-    <None Include="Shared\Old\ModelBindingKey.spark" />
-    <None Include="Shared\Old\FileOutputReport.spark" />
-    <None Include="Shared\Old\ExceptionReport.spark" />
-    <None Include="Shared\Old\Html.spark" />
-    <None Include="Shared\Old\SetValueReport.spark" />
-    <None Include="Shared\Old\OutputReport.spark" />
-    <None Include="Shared\Old\ModelBindingReport.spark" />
-    <None Include="Shared\Old\BehaviorDetails.spark" />
     <None Include="Shared\_global.spark">
       <SubType>Designer</SubType>
     </None>
@@ -184,6 +161,7 @@
     <Compile Include="Requests\HttpRequestVisualization.cs" />
     <Compile Include="Requests\RequestDataEndpoint.cs" />
     <Compile Include="Requests\RequestGrid.cs" />
+    <Compile Include="Requests\RequestStepTag.cs" />
     <Compile Include="Requests\RequestVisualizationEndpoint.cs" />
     <Compile Include="Runtime\HttpStatus.cs" />
     <Compile Include="Runtime\RequestStep.cs" />
@@ -239,8 +217,10 @@
     <Compile Include="Shared\Tags\ControlGroupDivTag.cs" />
     <Compile Include="Shared\Tags\DetailsTableTag.cs" />
     <Compile Include="Visualization\BehaviorNodeViewModel.cs" />
+    <Compile Include="Visualization\CollapsedDescription.cs" />
+    <Compile Include="Visualization\CollapsedDescriptionEndpoint.cs" />
     <Compile Include="Visualization\IVisualizer.cs" />
-    <Compile Include="Visualization\NodeVisualizationPageExtensions.cs" />
+    <Compile Include="Visualization\VisualizationPageExtensions.cs" />
     <Compile Include="Visualization\Visualizer.cs" />
   </ItemGroup>
   <ItemGroup />
