--- a/src/FubuMVC.Diagnostics.Tests/packages.config
+++ b/src/FubuMVC.Diagnostics.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="FubuMVC.JQueryUI" version="0.5.0.41" />
   <package id="FubuMVC.References" version="0.9.8.1111" />
   <package id="FubuMVC.SlickGrid" version="0.0.0.40" />
+  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.46" />
   <package id="FubuTestingSupport" version="0.9.9.175" />
   <package id="HtmlTags" version="1.1.0.94" />
   <package id="NUnit" version="2.5.10.11092" />
