added outline for tracing messages

--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Requests\RequestStepTag.cs" />
     <Compile Include="Requests\RequestVisualizationEndpoint.cs" />
     <Compile Include="Requests\ResponseHeadersTag.cs" />
+    <Compile Include="Requests\TracingOutlineTag.cs" />
     <Compile Include="Runtime\HttpStatus.cs" />
     <Compile Include="Runtime\RequestStep.cs" />
     <Compile Include="Runtime\RequestTraceListener.cs" />
