added a visualizer for SetValueReport

--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
     <Compile Include="Shared\Tags\DetailTableBuilderTester.cs" />
+    <Compile Include="Visualization\Visualizers\SetValueEndpointTester.cs" />
     <Compile Include="Visualization\VisualizerTester.cs" />
   </ItemGroup>
   <ItemGroup>
