--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -118,7 +118,6 @@
     <Compile Include="Models\SampleGridModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
-    <Compile Include="Shared\Tags\DetailTableBuilderTester.cs" />
     <Compile Include="Visualization\Visualizers\SetValueEndpointTester.cs" />
     <Compile Include="Visualization\VisualizerTester.cs" />
   </ItemGroup>
@@ -130,6 +129,9 @@
       <Project>{A1DEB080-5A9A-44B4-A10B-84DA9BD07AF5}</Project>
       <Name>FubuMVC.Diagnostics</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Shared\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
