--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="InteractionContextExtensions.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTagTester.cs" />
     <Compile Include="Requests\RequestStepTester.cs" />
+    <Compile Include="Requests\RequestVisualizationEndpointTester.cs" />
     <Compile Include="Requests\ResponseHeadersTagTester.cs" />
     <Compile Include="Routes\RouteReportTester.cs" />
     <Compile Include="Runtime\ApplyTracingIntegrationTesting.cs" />
