added a new visualization of description that doesn't blow chunks too badly IMHO.

--- a/src/DiagnosticsHarness/DiagnosticsHarness.csproj
+++ b/src/DiagnosticsHarness/DiagnosticsHarness.csproj
@@ -99,6 +99,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DescriptionBag.cs" />
+    <Compile Include="DescriptionEndpoints.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
