visualizer for the 'Traced' message.  Closes GH-37

--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -235,7 +235,9 @@
     <Compile Include="Visualization\VisualizationPageExtensions.cs" />
     <Compile Include="Visualization\Visualizer.cs" />
     <Compile Include="Visualization\Visualizers\BehaviorStartAndFinishEndpoints.cs" />
+    <Compile Include="Visualization\Visualizers\CommentTag.cs" />
     <Compile Include="Visualization\Visualizers\StringMessageEndpoint.cs" />
+    <Compile Include="Visualization\Visualizers\TracedEndpoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Visualization\Visualizers\ConfigurationActions\" />
