Model binding visualization.   Closes GH-1!

--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Visualization\Visualizer.cs" />
     <Compile Include="Visualization\Visualizers\BehaviorStartAndFinishEndpoints.cs" />
     <Compile Include="Visualization\Visualizers\CommentTag.cs" />
+    <Compile Include="Visualization\Visualizers\ModelBindingLogEndpoint.cs" />
     <Compile Include="Visualization\Visualizers\StringMessageEndpoint.cs" />
     <Compile Include="Visualization\Visualizers\TracedEndpoint.cs" />
   </ItemGroup>
