--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
     <Compile Include="Visualization\Visualizers\BehaviorStartAndFinishEndpointsTester.cs" />
+    <Compile Include="Visualization\Visualizers\ModelBindingLogEndpointTester.cs" />
     <Compile Include="Visualization\VisualizerTester.cs" />
   </ItemGroup>
   <ItemGroup>
