converting to new nuget structure

--- a/packaging/nuget/fubumvc.diagnostics.nuspec
+++ b/packaging/nuget/fubumvc.diagnostics.nuspec
@@ -12,10 +12,12 @@
     <description>A complete look into what's going on inside your FubuMVC application</description>
     <tags>fubumvc diagnostics</tags>
     <dependencies>
-      <dependency id="FubuMVC.References" version="0.9.8.1142" />
+      <dependency id="FubuMVC.Core" version="0.9.8.1219" />
+      <dependency id="FubuMVC.Core.UI" version="0.9.9.17" />
+      <dependency id="FubuMVC.Core.Assets" version="0.9.9.15" />
       <dependency id="FubuMVC.JQueryUI" />
       <dependency id="FubuMVC.SlickGrid" />
-      <dependency id="FubuMVC.Spark" />
+      <dependency id="FubuMVC.Spark" version="0.9.9.16" />
       <dependency id="FubuMVC.TwitterBootstrap" />
     </dependencies>
   </metadata>
