--- a/ripple.config
+++ b/ripple.config
@@ -15,5 +15,11 @@
     <string>FubuMVC.Spark</string>
     <string>FubuMVC.TwitterBootstrap</string>
     <string>FubuTestingSupport</string>
+    <string>FubuMVC</string>
+    <string>FubuMVC.Core</string>
+    <string>FubuMVC.Core.UI</string>
+    <string>FubuMVC.Core.Assets</string>
+    <string>FubuMVC.Core.View</string>
+    <string>FubuMVC.Media</string>
   </Floats>
 </ripple>
