--- a/src/FubuMVC.Diagnostics.Tests/packages.config
+++ b/src/FubuMVC.Diagnostics.Tests/packages.config
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.355" />
+  <package id="Bottles" version="0.9.1.376" />
   <package id="DotNetZip" version="1.9.1.8" />
-  <package id="FubuCore" version="0.9.9.179" />
-  <package id="FubuLocalization" version="0.9.5.77" />
-  <package id="FubuMVC.JQueryUI" version="0.5.0.74" />
-  <package id="FubuMVC.References" version="0.9.8.1155" />
-  <package id="FubuMVC.SlickGrid" version="0.0.0.75" />
-  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.79" />
-  <package id="FubuTestingSupport" version="0.9.9.179" />
-  <package id="HtmlTags" version="1.1.0.94" />
+  <package id="FubuCore" version="0.9.9.192" />
+  <package id="FubuLocalization" version="0.9.5.85" />
+  <package id="FubuMVC.Core" version="0.9.8.1219" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.15" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.17" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.16" targetFramework="net40" />
+  <package id="FubuMVC.JQueryUI" version="0.5.0.115" />
+  <package id="FubuMVC.Media" version="0.9.5.203" targetFramework="net40" />
+  <package id="FubuMVC.SlickGrid" version="0.0.0.123" />
+  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.120" />
+  <package id="FubuTestingSupport" version="0.9.9.192" />
+  <package id="HtmlTags" version="1.2.0.121" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6.1" />
   <package id="structuremap" version="2.6.3" />
