fixed nuget references and rev'd buildsupport

--- a/ripple.config
+++ b/ripple.config
@@ -21,5 +21,6 @@
     <string>FubuMVC.Core.Assets</string>
     <string>FubuMVC.Core.View</string>
     <string>FubuMVC.Media</string>
+    <string>FubuMVC.StructureMap</string>
   </Floats>
 </ripple>
