--- a/src/FubuMVC.Diagnostics/packages.config
+++ b/src/FubuMVC.Diagnostics/packages.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.376" />
-  <package id="FubuCore" version="0.9.9.192" />
-  <package id="FubuLocalization" version="0.9.5.85" />
-  <package id="FubuMVC.Core" version="0.9.8.1219" targetFramework="net40" />
-  <package id="FubuMVC.Core.Assets" version="0.9.9.15" targetFramework="net40" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.17" targetFramework="net40" />
-  <package id="FubuMVC.Core.View" version="0.9.9.16" targetFramework="net40" />
-  <package id="FubuMVC.JQueryUI" version="0.5.0.115" />
-  <package id="FubuMVC.Media" version="0.9.5.203" targetFramework="net40" />
-  <package id="FubuMVC.SlickGrid" version="0.0.0.123" />
-  <package id="FubuMVC.Spark" version="0.9.9.16" />
-  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.120" />
+  <package id="Bottles" version="0.9.5.388" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.204" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.97" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.8.1252" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.29" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.34" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.28" targetFramework="net40" />
+  <package id="FubuMVC.JQueryUI" version="0.5.0.126" targetFramework="net40" />
+  <package id="FubuMVC.Media" version="0.9.5.214" targetFramework="net40" />
+  <package id="FubuMVC.SlickGrid" version="0.0.0.134" targetFramework="net40" />
+  <package id="FubuMVC.Spark" version="0.9.9.28" targetFramework="net40" />
+  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.131" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.121" targetFramework="net40" />
   <package id="Spark" version="1.7.0.0" />
   <package id="structuremap" version="2.6.3" />
