--- a/src/FubuMVC.Diagnostics.Tests/packages.config
+++ b/src/FubuMVC.Diagnostics.Tests/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.9.399" targetFramework="net40" />
+  <package id="Bottles" version="0.9.9.401" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="FubuCore" version="0.9.9.206" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.104" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.8.1267" targetFramework="net40" />
-  <package id="FubuMVC.Core.Assets" version="0.9.9.36" targetFramework="net40" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.41" targetFramework="net40" />
-  <package id="FubuMVC.Core.View" version="0.9.9.35" targetFramework="net40" />
-  <package id="FubuMVC.JQueryUI" version="0.5.0.131" targetFramework="net40" />
-  <package id="FubuMVC.Media" version="0.9.5.219" targetFramework="net40" />
-  <package id="FubuMVC.SlickGrid" version="0.0.0.141" targetFramework="net40" />
-  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.137" targetFramework="net40" />
-  <package id="FubuTestingSupport" version="0.9.9.205" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.121" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.105" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1274" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.43" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.49" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.43" targetFramework="net40" />
+  <package id="FubuMVC.JQueryUI" version="0.5.0.138" targetFramework="net40" />
+  <package id="FubuMVC.Media" version="0.9.5.225" targetFramework="net40" />
+  <package id="FubuMVC.Navigation" version="0.9.0.1" targetFramework="net40" />
+  <package id="FubuMVC.SlickGrid" version="0.0.0.149" targetFramework="net40" />
+  <package id="FubuMVC.TwitterBootstrap" version="0.0.0.141" targetFramework="net40" />
+  <package id="FubuTestingSupport" version="0.9.9.206" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6.1" />
   <package id="structuremap" version="2.6.3" />
