--- a/ripple.config
+++ b/ripple.config
@@ -22,5 +22,6 @@
     <string>FubuMVC.Core.View</string>
     <string>FubuMVC.Media</string>
     <string>FubuMVC.StructureMap</string>
+    <string>FubuMVC.Navigation</string>
   </Floats>
 </ripple>
