updated spark refereneces.

--- a/ripple.config
+++ b/ripple.config
@@ -23,5 +23,6 @@
     <string>FubuMVC.Media</string>
     <string>FubuMVC.StructureMap</string>
     <string>FubuMVC.Navigation</string>
+    <string>HtmlTags</string>
   </Floats>
 </ripple>
