--- a/src/FubuMVC.Diagnostics/packages.config
+++ b/src/FubuMVC.Diagnostics/packages.config
@@ -4,16 +4,16 @@
   <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
   <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
   <package id="FubuMVC.Core" version="0.9.9.1399" targetFramework="net40" />
-  <package id="FubuMVC.Core.Assets" version="0.9.9.114" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.115" targetFramework="net40" />
   <package id="FubuMVC.Core.UI" version="0.9.9.138" targetFramework="net40" />
   <package id="FubuMVC.Core.View" version="0.9.9.119" targetFramework="net40" />
   <package id="FubuMVC.JQueryUI" version="0.5.0.217" targetFramework="net40" />
   <package id="FubuMVC.Media" version="0.9.5.307" targetFramework="net40" />
   <package id="FubuMVC.Navigation" version="0.9.0.80" targetFramework="net40" />
-  <package id="FubuMVC.SlickGrid" version="0.0.0.226" targetFramework="net40" />
+  <package id="FubuMVC.SlickGrid" version="0.0.0.227" targetFramework="net40" />
   <package id="FubuMVC.Spark" version="0.9.9.119" targetFramework="net40" />
   <package id="FubuMVC.TwitterBootstrap" version="0.0.0.225" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
-  <package id="Spark" version="1.7.0.0" />
+  <package id="HtmlTags" version="1.2.0.145" targetFramework="net40" />
+  <package id="Spark" version="1.7.5.0" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" />
 </packages>
